--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
   "homepage": "https://educationlink.github.io/vue-tel-input/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/EducationLink/vue-tel-input.git"
+    "url": "https://github.com/KevinVonJocoon/vue-tel-input.git"
   },
   "scripts": {
     "dist": "poi build ./src/vue-tel-input.js --format umd --module-name VueTelInput --filename.js vue-tel-input.js --filename.css vue-tel-input.css --no-sourceMap --no-html",
     "dist:demo": "poi build ./demo/index.js --config ./demo/build.config.js --filename.css vue-tel-input.css --no-sourceMap --dist ./docs",
-    "start": "yarn dev",
+    "start": "npm run dev",
     "dev": "poi build ./demo/index.js --config ./demo/build.config.js --filename.css vue-tel-input.css --no-sourceMap --no-minimize --dist ./docs",
-    "release": "rm -rf dist && yarn dist",
-    "demo": "yarn dist && yarn dev && yarn demo:open",
-    "demo:open": "open 'http://localhost:5000/'; serve ./docs/"
+    "release": "rm -rf dist && npm run dist",
+    "demo": "npm run dist && npm run dev && npm run demo:serve",
+    "demo:open": "open 'http://localhost:5000/'; serve ./docs/",
+    "demo:serve": "serve ./docs/"
   },
   "files": [
     "dist/"
